--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.27.2",
     "bluebird": "^3.7.2",
     "cross-env": "^7.0.3",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "fastify": "^3.29.0",
     "fastify-error": "^1.2.0",
